--- a/PlatformService/PlatformService.csproj
+++ b/PlatformService/PlatformService.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>d35113b8-40cd-4ea0-aad4-49ea6e2fcbcc</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
