command service buildout

--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
     "CommandService": "http://commands-clusterip-srv:80",
     "ConnectionStrings": {
-        "PlatformConn": "Server=mssql-clusterip-srv,1433;Initial Catalog=platformsdb;User ID=app;Password=Insecure-Password1!;"
+        "PlatformConn": "Server=mssql-clusterip-srv,1433;Initial Catalog=platformsdb;User ID=app;Password=Insecure-Password1!;TrustServerCertificate=true"
     }
 }
