--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "CommandService": "http://localhost:5278"
+  "CommandService": "http://localhost:5278",
+  "RabbitMQHost": "localhost",
+  "RabbitMQPort": "5672"
 }
