--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -2,5 +2,7 @@
     "CommandService": "http://commands-clusterip-srv:80",
     "ConnectionStrings": {
         "PlatformConn": "Server=mssql-clusterip-srv,1433;Initial Catalog=platformsdb;User ID=app;Password=Insecure-Password1!;TrustServerCertificate=true"
-    }
+    },
+    "RabbitMQHost": "rabbitmq-clusterip-srv",
+    "RabbitMQPort": "5672"
 }
