--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -4,5 +4,17 @@
         "PlatformConn": "Server=mssql-clusterip-srv,1433;Initial Catalog=platformsdb;User ID=app;Password=Insecure-Password1!;TrustServerCertificate=true"
     },
     "RabbitMQHost": "rabbitmq-clusterip-srv",
-    "RabbitMQPort": "5672"
+    "RabbitMQPort": "5672",
+    "Kestrel": {
+        "Endpoints": {
+            "Grpc": {
+                "Protocols": "Http2",
+                "Url": "http://platforms-clusterip-srv:666"
+            },
+            "webApi": {
+                "Protocols": "Http1",
+                "Url": "http://platforms-clusterip-srv:80"
+            }
+        }
+    }
 }
